<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageListActivity">

    <ImageView
        android:src="@drawable/background_black"
        android:id="@+id/im1"
        android:scaleType="fitXY"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="420dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@color/colorPrimary"
        app:tabTextColor="@color/design_default_color_surface">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/account_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/account_icon_tab"
            android:text="@string/account"
            android:textColor="@color/design_default_color_surface" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home_icon_tab"
            android:text="@string/home"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/message_icon_tab"
            android:text="@string/messages"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/posts_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/notification_icon_tab"
            android:text="@string/alerts"
            android:textColor="#FFFFFF" />

    </com.google.android.material.tabs.TabLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>