<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".DesignerRegistrationActivity">
    <ImageView
        android:src="@drawable/background_black"
        android:id="@+id/im1"
        android:scaleType="fitXY"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/customer_registration_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/customer_username"
        android:inputType="textPersonName"
        android:textColor="@color/design_default_color_on_primary"
        android:textColorHint="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/customer_registration_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/customer_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/design_default_color_on_primary"
        android:textColorHint="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_registration_username" />

    <EditText
        android:id="@+id/customer_registration_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/customer_password"
        android:inputType="textEmailAddress"
        android:textColor="@color/design_default_color_on_primary"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_registration_email" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="147dp"
        android:layout_height="119dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_icon" />

    <Button
        android:id="@+id/customer_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorPrimary"
        android:text="@string/customer_register_btn"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintStart_toStartOf="@+id/im1"
        app:layout_constraintTop_toBottomOf="@+id/customer_registration_password" />

</androidx.constraintlayout.widget.ConstraintLayout>