<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="420dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@color/colorPrimary"
        app:tabTextColor="@color/design_default_color_surface">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/account_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/account_icon_tab"
            android:text="Account"
            android:textColor="@color/design_default_color_surface" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home_icon_tab"
            android:text="Home"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/message_icon_tab"
            android:text="Messages"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/posts_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/notification_icon_tab"
            android:text="Alerts"
            android:textColor="#FFFFFF" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="116dp"
        android:text="@string/review_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_toolbar" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="338dp"
        android:layout_height="42dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="29dp"
        android:text="@string/review_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="334dp"
        android:layout_height="108dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="51dp"
        android:layout_marginStart="230dp"
        android:layout_marginBottom="164dp"
        android:text="@string/review_submit"
        app:layout_constraintBottom_toTopOf="@+id/main_tab_layout"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>