<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageListActivity">

    <ImageView
        android:id="@+id/im1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_black"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="48dp" />

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="420dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@color/colorPrimary"
        app:tabTextColor="@color/design_default_color_surface">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/account_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/account_icon_tab"
            android:text="Account"
            android:textColor="@color/design_default_color_surface" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home_icon_tab"
            android:text="Home"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/message_icon_tab"
            android:text="Messages"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/posts_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/notification_icon_tab"
            android:text="Alerts"
            android:textColor="#FFFFFF" />

    </com.google.android.material.tabs.TabLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:text="234"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_toolbar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="35dp"
        android:text="234"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_toolbar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/designer_downloads"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:text="@string/designer_uploads"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="103dp"
        android:layout_height="106dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/media_icon" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/designer_uploads"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="88dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="@+id/im1"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/upload_icon" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:text="@string/designer_upload_design"

        android:textColor="@color/design_default_color_on_primary"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="118dp"
        android:layout_height="86dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/promotions_icon" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/designer_add_promotion"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/promotions_icon2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="@string/designer_my_promotion"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />

</androidx.constraintlayout.widget.ConstraintLayout>